Advance kafka configuration with springboot